# toms_problem

./: README.md  pyproject.toml
src/toms_problem/: __init__.py  __main__.py  analytic_solution.py  cli.py  monte_carlo.py  problem.py  tom.py
