[project]
name = "toms-problem"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gerrit Kocherscheidt", email = "kochersg@koco-group.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
test = "toms_problem:test"
an_test = "toms_problem:an_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
stats = {cmd="python -m toms_problem"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/toms_problem"]
